Fix display on smaller screens

--- a/src/static/accounts/styles.css
+++ b/src/static/accounts/styles.css
@@ -236,6 +236,7 @@ form{
     background-color: rgb(235, 235, 235);
     height: 3em;
     margin: 5px;
+    width: 60%;
     padding: 2px 5px;
     border-radius: 10px;
     border: 0px;
